Fixed path to start stop scripts in instructions.

--- a/cartridges/raw-0.1/info/configuration/503.html
+++ b/cartridges/raw-0.1/info/configuration/503.html
@@ -272,7 +272,7 @@ jrcq3gYOyVkvcjjwUWA53iD6KaGAhISEvC/xg+QaYFQiHivqXVAh7w7hLxKGhIS8XzkHeCoUj/cv
       Raw cartridge allows you to run any application/framework that you want.
   </p>
   <p>
-      To get started, add your framework of choice and modify .openshift/action_scripts/{start, stop}
+      To get started, add your framework of choice and modify .openshift/action_hooks/{start, stop}
       to start and stop your application.
   </p>
   <p>
