fix wrong cased OpenShift

--- a/cartridges/raw-0.1/info/configuration/503.html
+++ b/cartridges/raw-0.1/info/configuration/503.html
@@ -264,7 +264,7 @@ W16LN5ZzKl4QD6YYj8FrAbyciMc6Vcry+O6PJxwj8MYzlgSTBZLeyvYTcvwLXqujHu9zS+axGQM+
 jrcq3gYOyVkvcjjwUWA53iD6KaGAhISEvC/xg+QaYFQiHivqXVAh7w7hLxKGhIS8XzkHeCoUj/cv
 /w+9BQu2G5s85QAAAABJRU5ErkJggg==">
   <h1>
-    503 - Openshift Raw cartridge
+    503 - OpenShift Raw cartridge
   </h1>
   <p>
       Your application is not currently running.
