Rename raw to diy contd.

--- a/cartridges/raw-0.1/info/configuration/index.html
+++ b/cartridges/raw-0.1/info/configuration/index.html
@@ -21,7 +21,7 @@
   a {
    color: #bfdce8;
   }
-  
+
   h1 {
     text-transform: uppercase;
     -moz-text-shadow: 2px 2px 2px black;
@@ -57,11 +57,11 @@
     right: 0;
     z-index: -1000;
   }
-  h2 { 
-    text-transform: uppercase; 
+  h2 {
+    text-transform: uppercase;
     margin: 2em 0 .5em;
   }
-  
+
   pre {
     background: black;
     padding: 1em 0 0;
@@ -70,7 +70,7 @@
     border-radius: 1em;
     color: #9cf;
   }
-  
+
   ul { margin: 0; padding: 0; }
   li {
     list-style-type: none;
@@ -264,7 +264,7 @@ W16LN5ZzKl4QD6YYj8FrAbyciMc6Vcry+O6PJxwj8MYzlgSTBZLeyvYTcvwLXqujHu9zS+axGQM+
 jrcq3gYOyVkvcjjwUWA53iD6KaGAhISEvC/xg+QaYFQiHivqXVAh7w7hLxKGhIS8XzkHeCoUj/cv
 /w+9BQu2G5s85QAAAABJRU5ErkJggg==">
   <h1>
-    Welcome to OpenShift - Raw compute
+    Welcome to OpenShift - Do-It-Yourself
   </h1>
   <p>
     This application is special to OpenShift in that it does not provide externally available resources.  IE: There's no webpage to go to.  It only provides compute power.
@@ -276,7 +276,7 @@ jrcq3gYOyVkvcjjwUWA53iD6KaGAhISEvC/xg+QaYFQiHivqXVAh7w7hLxKGhIS8XzkHeCoUj/cv
     git commit -a -m 'Some commit message'
     git push
   </pre>
-  
+
   <h2>
     What's next?
   </h2>
